# koverlay

./: .gitignore  .gitmodules  CMakeLists.txt  EntityManager.cpp  EntityManager.hpp  EntityManager.md  Point.hpp  Point.md  README.md  appicon.rc  copy.sh  with.hpp
.github/workflows/: build.yml  gcc.yml  msvc.yml
common/: registerTypes.hpp
common/components/: AdjustableComponent.hpp  GraphicsComponent.hpp  GraphicsComponent.md
common/helpers/: RegisterComponentMatcher.hpp
common/systems/assimp/: AssImpHelper.cpp  AssImpShadowMap.cpp  AssimpSystem.cpp
common/systems/bullet/: BulletSystem.cpp  CMakeLists.txt
common/systems/opengl/: GodRaysPointLight.cpp  Highlight.cpp  LightSphere.cpp  OpenGLSystem.cpp  PointLight.cpp  SSAO.cpp  ShadowCube.cpp  SkyBox.cpp  SpotLight.cpp
common/systems/opengl_sprites/: SpritesShader.cpp
common/systems/polyvox/: PolyVoxShader.cpp
examples/: example.lua
examples/newPlugin/: CMakeLists.txt  NewPlugin.cpp  framework.hpp
examples/newPlugin/imgui/: imgui.cpp
examples/newSystem/: CMakeLists.txt  NewSystem.cpp
http/: HttpServer.hpp  Packets.hpp
http/modules/: ProtocolModule.cpp
kengine/: Entity.hpp  README.md
kengine/common/components/: CameraComponent.hpp  HighlightComponent.hpp  TransformComponent.md
kengine/common/helpers/: ShaderHelper.cpp
kengine/common/systems/: PySystem.hpp
kengine/common/systems/assimp/: AssImpShader.cpp  AssImpShadowCube.cpp
kengine/common/systems/imgui_overlay/: ImGuiOverlaySystem.hpp
kengine/common/systems/opengl/: Debug.cpp  DirLight.cpp  GodRaysDirLight.cpp  GodRaysSpotLight.cpp  ShadowMap.cpp  Text.cpp
kengine/common/systems/opengl_sprites/: OpenGLSpritesSystem.cpp
kengine/common/systems/polyvox/: MagicaVoxelSystem.cpp  PolyVoxSystem.cpp
kengine/putils/: README.md
kengine/putils/http/: CMakeLists.txt  HttpMessage.hpp  README.md
kengine/putils/http/modules/: RoutesModule.cpp  SecureConnectionModule.hpp
kengine/putils/lua/: plua.hpp
opengl/: Program.hpp
plugins/: CMakeLists.txt
plugins/closestPlane/: CMakeLists.txt  ClosestPlaneSystem.cpp  ClosestPlaneSystem.hpp  format_airlines.sh  get_info.py
plugins/controller/: CMakeLists.txt  ControllerSystem.cpp
plugins/newPlugin/: CMakeLists.txt  NewPlugin.cpp  NewSystem.cpp  NewSystem.hpp  framework.hpp
putils/http/modules/: ProtocolModule.hpp  RoutesModule.hpp  SecureConnectionModule.cpp
scripts/: test.lua  types.json
src/: ImGuiLuaSystem.cpp  ImGuiLuaSystem.hpp  ImGuiPluginSystem.cpp  ImGuiPluginSystem.hpp  main.cpp  registerComponents1.cpp  registerComponents2.cpp  registerComponents3.cpp  registerTypes.h
src/imgui_lua_bindings/: imgui_iterator.inl
src/types/: registerAdjustableComponent.cpp  registerImGuiComponent.cpp  registerLuaComponent.cpp  registerPyComponent.cpp  registerTypes.cpp  registerTypes.hpp  registerkengineAdjustableComponent.cpp  registerkengineCommandLineComponent.cpp  registerkengineImGuiToolComponent.cpp  registerkengineInstanceComponent.cpp  registerkengineLuaComponent.cpp  registerkengineLuaTableComponent.cpp  registerkengineModelComponent.cpp  registerkengineNameComponent.cpp  registerkenginePythonComponent.cpp  registerkengineSelectedComponent.cpp  registerkengineTimeModulatorComponent.cpp  registerkengineWindowComponent.cpp  registerkenginefunctionsExecute.cpp  registerkenginemetaAttachTo.cpp  registerkenginemetaAttributes.cpp  registerkenginemetaCopy.cpp  registerkenginemetaCount.cpp  registerkenginemetaDetachFrom.cpp  registerkenginemetaDisplayImGui.cpp  registerkenginemetaEditImGui.cpp  registerkenginemetaForEachEntity.cpp  registerkenginemetaForEachEntityWithout.cpp  registerkenginemetaGet.cpp  registerkenginemetaHas.cpp  registerkenginemetaLoadFromJSON.cpp  registerkenginemetaMatchString.cpp  registerkenginemetaSaveToJSON.cpp  registerkenginemetaSize.cpp
